--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <p>heet Richard Ram.</p>
   </header>
   <footer>
-<img src="images/Richard.JPG" alt="">
+<img src="images/Richard.jpg" alt="">
 </footer>
 </article>
 
