--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <p>Dit is mijn gezin</p>
   </header>
   <footer>
-<img id="gezinfoto" src="images/Gezin.JPG" alt="">
+<img id="gezinfoto" src="images/Gezin.jpg" alt="">
 </footer>
 </article>
 
