--- a/project6.html
+++ b/project6.html
@@ -57,9 +57,7 @@
 
       <article class="Oplossing" class="projectfoto">
         <h2>Oplossing</h2>
-        <p>
-          Voor de oplossing zijn enkele verschillende !ideeen! uitgwerkt vervolgens zijn die gepresenteerd en is de aantrekkelijkste uitgekozen. Daarop zijn nog verschillende iteraties gemaakt waar weer uit is gekozen. Het kaartje heeft een strakke vrolijke vormgeving. De pinguins op de voorkant staan voor het stel en de pinguin in de binnenkant representeerd de pasgeboren baby.
-        </p>
+        Voor de oplossing zijn enkele verschillende ideeën uitgwerkt vervolgens zijn die gepresenteerd en is de aantrekkelijkste uitgekozen. Daarop zijn nog verschillende iteraties gemaakt waar weer uit is gekozen. Het kaartje heeft een strakke vrolijke vormgeving. De pinguins op de voorkant staan voor het stel en de pinguin in de binnenkant representeerd de pasgeboren baby.
       </article>
       <div id="project6foto4" class="projectfoto">
       </div>
